falta q3 del challenge 3

--- a/module-2/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
+++ b/module-2/lab-df-calculation-and-transformation/your-code/challenge-3.ipynb
@@ -238,11 +238,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12346</td>\n",
+       "      <td>77183.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12347</td>\n",
+       "      <td>4310.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12348</td>\n",
+       "      <td>1797.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12349</td>\n",
+       "      <td>1757.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12350</td>\n",
+       "      <td>334.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CustomerID  amount_spent\n",
+       "0       12346      77183.60\n",
+       "1       12347       4310.00\n",
+       "2       12348       1797.24\n",
+       "3       12349       1757.55\n",
+       "4       12350        334.40"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "#Aggregate amount spent for unique customers\n",
+    "\n",
+    "orders_aggregate = orders.groupby('CustomerID').agg('sum')['amount_spent'].reset_index()\n",
+    "orders_aggregate.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12347</td>\n",
+       "      <td>4310.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12348</td>\n",
+       "      <td>1797.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12349</td>\n",
+       "      <td>1757.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>12352</td>\n",
+       "      <td>2506.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>12356</td>\n",
+       "      <td>2811.43</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CustomerID  amount_spent\n",
+       "1       12347       4310.00\n",
+       "2       12348       1797.24\n",
+       "3       12349       1757.55\n",
+       "5       12352       2506.04\n",
+       "9       12356       2811.43"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Select customers chose amount spent is in iQR\n",
+    "\n",
+    "q75 = orders_aggregate['amount_spent'].quantile(0.75)\n",
+    "q95 = orders_aggregate['amount_spent'].quantile(0.95)\n",
+    "\n",
+    "orders_aggregate.loc[(orders_aggregate['amount_spent'] >=q75) & (orders_aggregate['amount_spent'] <= q95)].head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>amount_spent</th>\n",
+       "      <th>Label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12346</td>\n",
+       "      <td>77183.60</td>\n",
+       "      <td>VIP Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12347</td>\n",
+       "      <td>4310.00</td>\n",
+       "      <td>Preferred Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12348</td>\n",
+       "      <td>1797.24</td>\n",
+       "      <td>Preferred Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12349</td>\n",
+       "      <td>1757.55</td>\n",
+       "      <td>Preferred Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12350</td>\n",
+       "      <td>334.40</td>\n",
+       "      <td>Other</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CustomerID  amount_spent                Label\n",
+       "0       12346      77183.60        VIP Customers\n",
+       "1       12347       4310.00  Preferred Customers\n",
+       "2       12348       1797.24  Preferred Customers\n",
+       "3       12349       1757.55  Preferred Customers\n",
+       "4       12350        334.40                Other"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#label selected customers as \"VIP\" or \"Preferred\"\n",
+    "#VIP Customers above the 95th percentile. Preferred Customers between the 75th and 95th percentile.\n",
+    "\n",
+    "def Label(amount):\n",
+    "    if q75 < amount < q95:\n",
+    "        return 'Preferred Customers'\n",
+    "    elif amount > q95:\n",
+    "        return 'VIP Customers'\n",
+    "    else:\n",
+    "        return 'Other'\n",
+    "\n",
+    "orders_aggregate['Label'] = orders_aggregate['amount_spent'].apply(Label)\n",
+    "orders_aggregate.head()"
    ]
   },
   {
@@ -260,11 +511,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>amount_spent</th>\n",
+       "      <th>Label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>138521.31</td>\n",
+       "      <td>VIP Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>10198.68</td>\n",
+       "      <td>VIP Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>548.40</td>\n",
+       "      <td>Other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>41196.34</td>\n",
+       "      <td>VIP Customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>1143.60</td>\n",
+       "      <td>Other</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Country  amount_spent          Label\n",
+       "0  Australia     138521.31  VIP Customers\n",
+       "1    Austria      10198.68  VIP Customers\n",
+       "2    Bahrain        548.40          Other\n",
+       "3    Belgium      41196.34  VIP Customers\n",
+       "4     Brazil       1143.60          Other"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Country with most VIP Customers.\n",
+    "# Repito la misma operación que al princpio del challenge pero agrupando por países\n",
+    "orders_country = orders.groupby(['Country']).agg('sum')['amount_spent'].reset_index()\n",
+    "orders_country['Label'] = orders_country['amount_spent'].apply(Label)\n",
+    "orders_country.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>VIP Customers</td>\n",
+       "      <td>7.308392e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>VIP Customers</td>\n",
+       "      <td>2.854463e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>EIRE</td>\n",
+       "      <td>VIP Customers</td>\n",
+       "      <td>2.655459e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>VIP Customers</td>\n",
+       "      <td>2.288671e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>France</td>\n",
+       "      <td>VIP Customers</td>\n",
+       "      <td>2.090240e+05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Country          Label  amount_spent\n",
+       "35  United Kingdom  VIP Customers  7.308392e+06\n",
+       "23     Netherlands  VIP Customers  2.854463e+05\n",
+       "10            EIRE  VIP Customers  2.655459e+05\n",
+       "14         Germany  VIP Customers  2.288671e+05\n",
+       "13          France  VIP Customers  2.090240e+05"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Agrupa ahora por país y etiqueta para ver cuál suma + cantidad de dinero y, por tanto, más VIP Customers.\n",
+    "orders_country = orders_country.groupby(['Country', 'Label']).agg('sum')['amount_spent'].reset_index().sort_values(by='amount_spent', ascending=False)\n",
+    "orders_country.head()\n",
+    "\n",
+    "#United Kingdom tiene más VIP Customers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "#Q3 : Country with VIP and Customers Preferred combined\n"
    ]
   }
  ],
@@ -284,7 +711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
