--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,42 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['i',\n",
-       " 'i',\n",
-       " 'o',\n",
-       " 'i',\n",
-       " 'o',\n",
-       " 'e',\n",
-       " 'a',\n",
-       " 'e',\n",
-       " 'e',\n",
-       " 'e',\n",
-       " 'i',\n",
-       " 'a',\n",
-       " 'o',\n",
-       " 'o',\n",
-       " 'u',\n",
-       " 'e',\n",
-       " 'o',\n",
-       " 'o',\n",
-       " 'e',\n",
-       " 'i',\n",
-       " 'i']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['T', 'h', ' ', 'p', 'p', 'p', 'y', ' ', 's', 'w', ' ', 'l', 'l', ' ', 't', 'h', ' ', 'r', 's', 't', ' ', 'f', ' ', 't', 'h', ' ', 'p', 'p', 'p', 's', ' ', 'p', 'l', 'y', 'n', 'g', ' ', 'n', 'd', ' ', 'w', 'n', 't', 'd', ' ', 't', ' ', 'j', 'n', ' ', 't', 'h', 'm', '.', ' ', 'I', ' ', 's', 'w', ' ', 't', 'h', 's', ' ', 'n', 'd', ' ', 'w', 'n', 't', 'd', ' ', ' ', 'p', 'p', 'p', 'y', ' ', 'f', ' ', 'm', 'y', ' ', 'w', 'n', '!']\n"
+     ]
     }
    ],
    "source": [
-    "re.findall('[aeiou]', text)"
+    "print(re.findall('[^aeiou]', text))"
    ]
   },
   {
@@ -92,23 +69,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-34-90ae59246fb6>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-90ae59246fb6>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print(re.findall(^pupp', text)) #me saca la palabra puppy\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['puppy', 'puppies', 'puppy']\n"
      ]
     }
    ],
    "source": [
     "import re\n",
     "text = \"The puppy saw all the rest of the puppies playing and wanted to join them. I saw this and wanted a puppy of my own!\"\n",
-    "print(re.findall(^pupp', text)) #me saca la palabra puppy\n",
-    "#print(re.findall('puppies', text)) #me saca la palabra puppies"
+    "print(re.findall('pupp\\w+',text))"
    ]
   },
   {
@@ -129,22 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['run']\n",
-      "['ran']\n"
+      "['ran', 'run']\n"
      ]
     }
    ],
    "source": [
     "text = \"I ran the relay race the only way I knew how to run it.\"\n",
-    "print(re.findall('run', text))\n",
-    "print(re.findall('ran', text))"
+    "print(re.findall('r\\w+n', text))"
    ]
   },
   {
@@ -156,20 +129,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['r', 'r', 'r', 'r']\n"
+      "['ran', 'relay', 'race', 'run']\n"
      ]
     }
    ],
    "source": [
     "text = \"I ran the relay race the only way I knew how to run it.\"\n",
-    "result = re.findall(\"r\",text)\n",
+    "result = re.findall(\"r\\w+n?\",text)\n",
     "print(result)"
    ]
   },
@@ -182,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,23 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "finditer() missing 2 required positional arguments: 'pattern' and 'string'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-98e19ffe1838>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfinditer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: finditer() missing 2 required positional arguments: 'pattern' and 'string'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a sentence with special characters in it.\n"
      ]
     }
    ],
    "source": [
-    "result = re.finditer()"
+    "result = re.sub('!','i',text)\n",
+    "print(result)\n"
    ]
   },
   {
@@ -219,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,10 +198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sentence', 'words', 'varying', 'lengths']\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = re.findall('\\w{4}[a-zA-Z0-9_]+',text)\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,10 +232,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bet', 'robot', 'beat', 'bot', 'bat', 'but', 'bit']\n",
+      "['the', 'the', 'other', 'with', 'instead']\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_b = re.findall('\\w*?b\\w+', text)\n",
+    "print(result_b)\n",
+    "result_t = re.findall('\\w*?t\\w+',text)\n",
+    "print(result_t)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,10 +269,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['peaks', 'people', 'realize', 'breathtaking', 'Nearly']\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = re.findall('\\w*?ea\\w+|\\w*?eo\\w+',text)\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -288,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,10 +303,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Teddy', 'Roosevelt', 'Abraham', 'Lincoln']\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = re.findall('[A-Z]\\w+',text)\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -311,10 +328,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Teddy Roosevelt', 'Abraham Lincoln']\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = re.findall('[A-Z]\\w+\\W+\\w+',text)\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -327,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,10 +364,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\"', '\"', '\"', '\"']"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#result = re.findall([^A-Za-z0-9_],text)\n",
+    "re.findall('[\"]', text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -350,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,10 +401,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['30', '30', '14', '16', '10']\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = re.findall('[0-9]\\w+',text)\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -373,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,10 +438,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['876-93-2289', '098-32-5295']"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall('\\d+-\\d+-\\d+', text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -402,7 +468,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "re.findall('\\(+\\d+\\)+\\d+.+\\d+\\d+-\\d+-\\d+', text)\n",
+    "re.findall('\\(+\\d+\\)+\\d+.+\\d+', text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -428,14 +497,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15+"
   }
  },
  "nbformat": 4,
